@@ -24,6 +24,38 @@ This file is generated automagicaly by gen_known_bugs.pl script.
         <td align="center"><font color="#000000"><b>Submitted By</b></font></td>
       </tr>
 <tr bgcolor="#dababa">
+  <td> 1723280 </td>
+  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1723280&amp;group_id=599&amp;atid=100599"> Initialized pointers to structs are not supported </a></td>
+  <td>2007-05-22 01:31 </td>
+  <td align="center"> 5 </td>
+  <td>tecodev</td>
+  <td>tecodev</td>
+</tr>
+<tr bgcolor="#dababa">
+  <td> 1723128 </td>
+  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1723128&amp;group_id=599&amp;atid=100599"> Code compiles 2.6.0 but causes fatal error on 2.7.0 </a></td>
+  <td>2007-05-21 16:10 </td>
+  <td align="center"> 5 </td>
+  <td>nobody</td>
+  <td>grahamnz</td>
+</tr>
+<tr bgcolor="#dababa">
+  <td> 1717943 </td>
+  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1717943&amp;group_id=599&amp;atid=100599"> wrong optimized flow </a></td>
+  <td>2007-05-12 16:32 </td>
+  <td align="center"> 5 </td>
+  <td>nobody</td>
+  <td>wolfgang75</td>
+</tr>
+<tr bgcolor="#dababa">
+  <td> 1717305 </td>
+  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1717305&amp;group_id=599&amp;atid=100599"> inline functions don&#39;t work with const parameters </a></td>
+  <td>2007-05-11 08:58 </td>
+  <td align="center"> 5 </td>
+  <td>nobody</td>
+  <td>spth</td>
+</tr>
+<tr bgcolor="#dababa">
   <td> 1715020 </td>
   <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1715020&amp;group_id=599&amp;atid=100599"> Cast volatile over literal constant address is ignored. </a></td>
   <td>2007-05-08 06:47 </td>
@@ -448,14 +480,6 @@ This file is generated automagicaly by gen_known_bugs.pl script.
   <td>amep</td>
 </tr>
 <tr bgcolor="#dababa">
-  <td> 1498479 </td>
-  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1498479&amp;group_id=599&amp;atid=100599"> sdcc Z80port math library update </a></td>
-  <td>2006-05-31 13:10 </td>
-  <td align="center"> 5 </td>
-  <td>nobody</td>
-  <td>hbingal</td>
-</tr>
-<tr bgcolor="#dababa">
   <td> 1485812 </td>
   <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1485812&amp;group_id=599&amp;atid=100599"> pic16: regression test bug1426356.c fails </a></td>
   <td>2006-05-10 10:48 </td>
@@ -584,14 +608,6 @@ This file is generated automagicaly by gen_known_bugs.pl script.
   <td>maartenbrock</td>
 </tr>
 <tr bgcolor="#dababa">
-  <td> 1358533 </td>
-  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1358533&amp;group_id=599&amp;atid=100599"> Global variables do not work as loop operands </a></td>
-  <td>2005-11-16 15:02 </td>
-  <td align="center"> 5 </td>
-  <td>nobody</td>
-  <td>atarimax</td>
-</tr>
-<tr bgcolor="#dababa">
   <td> 1309013 </td>
   <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1309013&amp;group_id=599&amp;atid=100599"> Pointer types ignored </a></td>
   <td>2005-09-29 15:53 </td>
@@ -612,7 +628,7 @@ This file is generated automagicaly by gen_known_bugs.pl script.
   <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1294691&amp;group_id=599&amp;atid=100599"> nested ifs make compiler crash </a></td>
   <td>2005-09-18 11:08 </td>
   <td align="center"> 5 </td>
-  <td>nobody</td>
+  <td>borutr</td>
   <td>spth</td>
 </tr>
 <tr bgcolor="#dababa">
